# march-madness-2026

./: .gitignore  2026_notebook.ipynb  README.md  kaggle_scraper.py  kaggle_scraper_noleak.py  pyproject.toml  simulate-n-brackets.ipynb  simulated-bracket-playground.ipynb  tune_xgb_features.py  winner-2025.ipynb
.github/: copilot-instructions.md
