[project]
name = "march-madness-2026"
version = "0.1.0"
description = ""
authors = [
    {name = "Brendan LaPuma",email = "brendanlapuma@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,!=3.14.1"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "cloudscraper (>=1.2.71,<2.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
